<resources>
    <string name="app_name">Jobsity Tv Shows</string>
    <string name="no_internet_connection_message">No connection found. Please, make sure you have active data connection</string>
    <string name="circle_separator">●</string>
    <string name="try_again">Try again</string>
    <string name="error_load_tv_shows">An error happen when load tv shows. Please try again or contact support</string>
    <string name="internet_connection_error_message">No internet connection. Please check if your device is connected to internet</string>
    <string name="error_load_more_tv_shows_message">Error when load more tv shows</string>
    <string name="search">Search for shows and people</string>
    <string name="no_show_found_message">No show with this term was found</string>
    <string name="generic_error_message">Server error. Please contact support</string>
    <string name="people_not_found_message">No people was found with this term</string>
    <string name="error_people_search_message">An error happen when try to search for people. Please try again or contact support</string>
    <string name="back">back</string>
    <string name="error_loading_episodes_message">Error when lading episodes. Please try again later</string>
    <string name="season_">Season %s</string>
    <string name="episode_">Episode %s</string>
    <string name="list_of_episodes">List of episodes</string>
    <string name="no_favorites_message">You have no favorites Tv shows!</string>
    <string name="search_in_favorites">Search in your favorite list</string>
    <string name="first_digit">First Digit</string>
    <string name="second_digit">Second digit</string>
    <string name="third_digit">Third digit</string>
    <string name="fourth_digit">Fourth digit</string>
    <string name="save">Save</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="pin_must_have_all_4_digits">Pin must have all 4 digits</string>
    <string name="pin_number_set_message">Your pin number was set</string>
    <string name="done">Done</string>
    <string name="wrong_pin_number">Wrong pin number.Try again!</string>
    <string name="lock_using_a_pin_number">Lock using a PIN number</string>
    <string name="set_pin_number_to_unlock_">Set your Pin Number to unlock \n%s</string>
    <string name="favorites">Favorites</string>
    <string name="set_pin">Set Pin</string>
    <string name="about">About</string>
    <string name="arthur_github">https://github.com/atroliveira92</string>
    <string name="about_message">Jobsity Tv Show v1.0 - This app was create under the Jobsity\'s Android Code Challenge requirements for the Android Engineer position</string>
    <string name="created_by">Created by Arthur Oliveira</string>
    <string name="github">Github:</string>
    <string name="email">Email:</string>
    <string name="no_show_was_found">No show was found</string>
</resources>